KUBE-MANIFEST/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    k8s-app: app-django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-django
  template:
    metadata:
      labels:
        app: app-django # Service will look for those PODS labels 
        gitlab: diplom
        owner: DenisUsmanov
    spec:
      containers:
      - name: app-django
        image: usmcode/diplom:v.1
        command: [ '/bin/sh' ]
        args: ['-c', 'python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:3003']
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3003
