KUBE-MANIFEST/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    k8s: db-postgres 
    gitlab: diplom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-postgres
  template:
    metadata:
      labels:
        app: db-postgres
        owner: DenisUsmanov
    spec:
      containers:
        - name: db
          image: postgres:13-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pg-data-mount
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: pg-data-mount
          persistentVolumeClaim:
            claimName: pg-data-pv-claim
