KUBE-MANIFEST/app-service-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-nodeport
spec:
  selector:
    app: app-django
  ports:
  - port: 3003
    targetPort: 3003
  type: NodePort
