KUBE-MANIFEST/app_service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-cluster-ip # this is the name of the service that will be available to the application
  labels:
    env: app-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 3003
  selector:
    app: ap-django
