KUBE-MANIFEST/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-postgres # this is the name of the service that will be available to the application
  labels:
    app: db-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: db-postgres
