KUBE-MANIFEST/service-loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: access-pods-app-django
  labels:
    env: prod
    owner: DenisUsmanov
spec:
  selector:
    app: app-django 
  ports:
    - name: app-listener
      protocol    : TCP
      port        : 80
      targetPort  : 3003
  type            : LoadBalancer
