KUBE-MANIFEST/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-workin-pleess
  labels:
    name: myingress
spec:
  rules:
  - host: usmanofff.ru
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-cluster-ip
            port: 
              number: 3003
  - host: usmanofff.ru
    http:
      paths:
      - pathType: Prefix
        path: /postgres
        backend:
          service:
            name: db-postgres
            port: 
              number: 5432
